Use getFirst, getLast where appropriate